--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <input class="form-control" type="email" id="email">
                     <label class="form-label" for="mensagem">Seu número</label>
                     <input id=" mensagem" class="form-control"></input>
-                    <button class="btn btn-success "> Enviar</button>
+                    <button class="btn btn-primary "> Enviar</button>
                 </form>
             </div>
         </div>
